Issues were Fixed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,4 +14,8 @@ addPost.commentTitle=T&iacute;tulo del comentario
 
 usersPopUp.likeFrom=Me gusta de
 
+postDetail.postNotExist=Post no disponible
+
+common.said=dijo:
 common.selectOne=Seleccione...
+common.seeMore=...ver m&aacute;s
